WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170776
[MediaStream] Audio source in UI process not identified as capture source
https://bugs.webkit.org/show_bug.cgi?id=170776
Summary
[MediaStream] Audio source in UI process not identified as capture source
Eric Carlson
Reported
2017-04-12 10:05:32 PDT
Audio source in UI process not identified as capture source
Attachments
Proposed patch
(1.24 KB, patch)
2017-04-12 10:14 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2017-04-12 10:14:45 PDT
Created
attachment 306917
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2017-04-12 11:10:46 PDT
Comment on
attachment 306917
[details]
Proposed patch Clearing flags on attachment: 306917 Committed
r215273
: <
http://trac.webkit.org/changeset/215273
>
WebKit Commit Bot
Comment 3
2017-04-12 11:10:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug