[MediaStream] Audio source in UI process not identified as capture source https://bugs.webkit.org/show_bug.cgi?id=170776

Reviewed by Youenn Fablet.

* WebProcess/cocoa/UserMediaCaptureManager.cpp: Override isCaptureSource.


Canonical link: https://commits.webkit.org/187698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215273 268f45cc-cd09-0410-ab3c-d52691b4dbfc